--- a/IV.html
+++ b/IV.html
@@ -9,13 +9,20 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>IV Терапия в Наркологической клинике Trezvostin</title>
-    <meta name="description" content="Узнайте о IV терапии в Наркологической клинике Trezvostin. Капельницы антистресс, детокс, энергия, для похудения, и для печени. Выберите подходящий эффект и заказывайте сейчас.">
-    <meta name="keywords" content="IV терапия, капельница, антистресс, детокс, энергия, похудение, печень, Trezvostin">
-    <meta property="og:title" content="IV Терапия в Наркологической клинике Trezvostin">
-    <meta property="og:description" content="Узнайте о IV терапии в Наркологической клинике Trezvostin. Капельницы антистресс, детокс, энергия, для похудения, и для печени. Выберите подходящий эффект и заказывайте сейчас.">
-    <meta property="og:image" content="ссылка_на_изображение_логотипа_или_главной_страницы">
-    <meta property="og:url" content="ссылка_на_страницу_IV_терапии">
+    <title>Наркологическая клиника Trezvostin - IV-терапия. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.</title>
+    <meta name="description" content="Исследуйте многообразие капельниц в клинике Trezvostin: Антистресс, Детокс, Энергия, Похудение, Золушка, Печень, Иммунитет, Коктейль Майерса, Сердце. Каждая капельница обладает уникальными свойствами, направленными на укрепление организма. Подробности, эффекты и цены на сайте Trezvostin.">
+    <meta name="keywords" content="IV-терапия Trezvostin, капельницы IV-терапии, капельница антистресс, капельница детокс, капельница энергия, капельницы для похудения, капельница Золушка, капельницы для печени, капельница GepatoPro, капельница для иммунитета Imunno, капельница коктейль Майерса, капельница для сердца Cardio, IV-терапия в Москве, стандарт, стандарт+, максимальная, цены на капельницы, эффекты IV-терапии, заказать капельницу, комплекс медицинских процедур, детоксикация и восстановление, профессиональная медицинская помощь, качественные услуги, наркологическая клиника Trezvostin, срочный выезд нарколога, стационарное лечение, анонимное лечение алкоголизма, кодирование от алкоголя, фармакологические методы кодирования, психологические методы кодирования, гипноз, метод Довженко, психотерапия, физиотерапевтические методы кодирования, лазерное кодирование, ТЭС-терапия, ранняя терапия, стадии зависимости, мотивационные беседы, интервенция, комплексное лечение, медицинская терапия, психологическая поддержка, реабилитационные программы, Москва, МО.">
+    <meta property='og:title' content='Наркологическая клиника Trezvostin - IV-терапия. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.' />
+    <meta property='og:description' content='Исследуйте многообразие капельниц в клинике Trezvostin: Антистресс, Детокс, Энергия, Похудение, Золушка, Печень, Иммунитет, Коктейль Майерса, Сердце. Каждая капельница обладает уникальными свойствами, направленными на укрепление организма. Подробности, эффекты и цены на сайте Trezvostin.' />
+    <meta property='og:site_name' content='Наркологическая клиника Trezvostin' />
+    <meta property='og:locale' content='ru_RU' />
+    <meta property='og:image' content='https://trezvostin.ru/favicon.ico' />
+    <meta property='og:image:width' content='100' />
+    <meta property='og:image:height' content='100' />
+    <meta property='twitter:title' content="Наркологическая клиника Trezvostin - IV-терапия. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно." />
+    <meta property='twitter:description' content="Исследуйте многообразие капельниц в клинике Trezvostin: Антистресс, Детокс, Энергия, Похудение, Золушка, Печень, Иммунитет, Коктейль Майерса, Сердце. Каждая капельница обладает уникальными свойствами, направленными на укрепление организма. Подробности, эффекты и цены на сайте Trezvostin." />
+    <meta property='twitter:site' content='Наркологическая клиника Trezvostin' />
+    <meta property='twitter:image' content='https://trezvostin.ru/favicon.ico' />
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
   </head>
