--- a/index.html
+++ b/index.html
@@ -1,6 +1,22 @@
 <!DOCTYPE html>
 <html lang="ru">
   <head>
+    <title>Наркологическая клиника Trezvostin - Ваш путь к здоровью и трезвости. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.</title>
+    <meta name="description" content="Наркологическая клиника Trezvostin предлагает профессиональную наркологическую и психиатрическую помощь в Москве. Мы осуществляем срочный выезд нарколога, вывод из запоя на дому и предоставляем стационарное лечение от алкогольной зависимости. У нас вы можете получить анонимное лечение. Методы кодирования от алкоголя включают фармакологические (вшивание, укол) и психологические (гипноз, метод Довженко, психотерапия), а также физиотерапевтические методы - кодирование лазером и ТЭС-терапия. Мы стремимся начинать терапию на ранних стадиях, обеспечивая стабильную ремиссию или полное выздоровление. Наши наркологи помогут вам освободиться от мотивов приема алкоголя через мотивационные беседы и интервенции. Trezvostin предоставляет комплексное лечение, включая медицинскую терапию, психологическую поддержку и реабилитационные программы. Наша команда специалистов с опытом готова помочь вам на пути к здоровой и трезвой жизни с уважением и конфиденциальностью.">
+    <meta name="keywords" content="Наркологическая клиника Trezvostin, вывод из запоя на дому, центр реабилитации, частная наркологическая клиника, наркологическая помощь, психиатрическое лечение, срочный выезд нарколога, стационарное лечение, анонимное лечение алкоголизма, кодирование от алкоголя, фармакологические методы кодирования, психологические методы кодирования, гипноз, метод Довженко, психотерапия, физиотерапевтические методы кодирования, лазерное кодирование, ТЭС-терапия, ранняя терапия, стадии зависимости, мотивационные беседы, интервенция, комплексное лечение, медицинская терапия, психологическая поддержка, реабилитационные программы, Москва.">
+    <meta property='og:title' content='Наркологическая клиника Trezvostin - Ваш путь к здоровью и трезвости. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.' />
+    <meta property='og:description' content='Наркологическая клиника Trezvostin предлагает профессиональную наркологическую и психиатрическую помощь в Москве. Мы осуществляем срочный выезд нарколога, вывод из запоя на дому и предоставляем стационарное лечение от алкогольной зависимости. У нас вы можете получить анонимное лечение. Методы кодирования от алкоголя включают фармакологические (вшивание, укол) и психологические (гипноз, метод Довженко, психотерапия), а также физиотерапевтические методы - кодирование лазером и ТЭС-терапия. Мы стремимся начинать терапию на ранних стадиях, обеспечивая стабильную ремиссию или полное выздоровление. Наши наркологи помогут вам освободиться от мотивов приема алкоголя через мотивационные беседы и интервенции. Trezvostin предоставляет комплексное лечение, включая медицинскую терапию, психологическую поддержку и реабилитационные программы. Наша команда специалистов с опытом готова помочь вам на пути к здоровой и трезвой жизни с уважением и конфиденциальностью.' />
+    <meta property='og:site_name' content='Наркологическая клиника Trezvostin' />
+    <meta property='og:locale' content='ru_RU' />
+    <meta property='og:image' content='https://trezvostin.ru/favicon.ico' />
+    <meta property='og:image:width' content='100' />
+    <meta property='og:image:height' content='100' />
+    <meta property='twitter:title' content="Наркологическая клиника Trezvostin - Ваш путь к здоровью и трезвости. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно." />
+    <meta property='twitter:description' content="Наркологическая клиника Trezvostin предлагает профессиональную наркологическую и психиатрическую помощь в Москве. Мы осуществляем срочный выезд нарколога, вывод из запоя на дому и предоставляем стационарное лечение от алкогольной зависимости. У нас вы можете получить анонимное лечение. Методы кодирования от алкоголя включают фармакологические (вшивание, укол) и психологические (гипноз, метод Довженко, психотерапия), а также физиотерапевтические методы - кодирование лазером и ТЭС-терапия. Мы стремимся начинать терапию на ранних стадиях, обеспечивая стабильную ремиссию или полное выздоровление. Наши наркологи помогут вам освободиться от мотивов приема алкоголя через мотивационные беседы и интервенции. Trezvostin предоставляет комплексное лечение, включая медицинскую терапию, психологическую поддержку и реабилитационные программы. Наша команда специалистов с опытом готова помочь вам на пути к здоровой и трезвой жизни с уважением и конфиденциальностью." />
+    <meta property='twitter:site' content='Наркологическая клиника Trezvostin' />
+    <meta property='twitter:image' content='https://trezvostin.ru/favicon.ico' />
+    <meta property="og:type" content="website">
+    <meta property="og:locale" content="ru_RU">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -9,15 +25,6 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Наркологическая клиника Trezvostin - Ваш путь к здоровью и трезвости. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.</title>
-    <meta name="description" content="Наркологическая клиника Trezvostin предоставляет высококачественные услуги по лечению зависимости. Наши специалисты помогут вам вернуть здоровье и трезвость.">
-    <meta name="keywords" content="наркология, лечение зависимости, трезвость, наркологическая клиника, реабилитация, Московская область, Москва, программы восстановления, амбулаторное лечение, стационарное лечение, индивидуальный подход, профессиональные наркологи, психотерапия, медикаментозная терапия, групповые сессии, социальная реабилитация, поддержка семьи, послеоперационный уход, долгосрочная поддержка, современные методики лечения, безопасная детоксикация, эффективные реабилитационные программы">
-    <meta property="og:title" content="Наркологическая клиника Trezvostin">
-    <meta property="og:description" content="Ваш путь к здоровью и трезвости. Лечение зависимости в наркологической клинике Trezvostin.">
-    <meta property="og:image" content="ссылка_на_изображение_логотипа_или_главной_страницы">
-    <meta property="og:url" content="ссылка_на_главную_страницу">
-    <meta property="og:type" content="website">
-    <meta property="og:locale" content="ru_RU">
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
@@ -57,7 +64,7 @@
       <div class="intro__wrapper">
         <h1>Наркологическая клиника Trezvostin</h1>
         <p>Выезд по МО и Москве 45 минут</p>
-        <a id="" href="tel:+79209374763">Срочный вызов</a>
+        <a  href="tel:+79209374763">Срочный вызов</a>
       </div>
     </section>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-element-bundle.min.js"></script>
@@ -77,8 +84,11 @@
               Включен минимально необходимый набор медикаментов
             </p>
           </div>
+        <div class="text-slider">
+          <a  href="./price.html">Срочный вызов</a>
+          <p class="price">5000 руб</p>
+        </div>
 
-          <p class="price">5000 руб.</p>
         </div></swiper-slide
         >
         <swiper-slide
@@ -96,7 +106,10 @@
             </p>
           </div>
 
-          <p class="price">8000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
+          </div>
         </div></swiper-slide
         >
         <swiper-slide
@@ -117,7 +130,10 @@
             </p>
           </div>
 
-          <p class="price">15000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
+          </div>
         </div></swiper-slide
         >
       </swiper-container>
@@ -138,7 +154,10 @@
             </p>
           </div>
 
-          <p class="price">5000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">5000 руб</p>
+          </div>
         </div>
         <div class="slider-card">
           <div class="text-flex">
@@ -154,7 +173,10 @@
             </p>
           </div>
 
-          <p class="price">8000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
+          </div>
         </div>
         <div class="slider-card">
           <div class="text-flex">
@@ -172,8 +194,10 @@
               Гарантия положительного результата
             </p>
           </div>
-
-          <p class="price">15000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
+          </div>
         </div>
       </div>
 
@@ -227,7 +251,7 @@
             </svg>
 
           </div>
-          <p>Гарантируем 100% результат после лечения если соблюдать все рекомендации врача</p>
+          <p>Диагностика состояния пациента, включая тщательный осмотр, сбор анамнеза и инструментальные исследования</p>
         </div>
         <div class="cheapCard second">
           <div class="card-outside">
@@ -256,7 +280,7 @@
               </defs>
             </svg>
           </div>
-          <p>Гарантируем 100% результат после лечения если соблюдать все рекомендации врача</p>
+          <p>Индивидуальный подбор препаратов, соответсвующий состоянию пациента и направленный на максимальный результат</p>
         </div>
         <div class="cheapCard">
           <div class="card-outside">
@@ -270,7 +294,7 @@
               <path d="M32.7503 37.6198H26.9896C26.8741 37.2194 26.8902 36.3005 27.0199 35.3589C31.5856 34.9851 34.8562 31.8312 35.6226 27.0477C38.8965 26.0362 39.1821 21.4789 36.0731 20.0495C37.2745 17.1548 38.9814 11.6367 36.35 8.23063C36.3363 8.20919 36.3198 8.18152 36.3 8.14925C35.2704 6.27522 33.0847 4.90672 30.8535 7.12966C30.5144 7.46424 30.3627 7.54911 30.2977 7.56727C30.2198 7.52702 29.739 7.21705 29.099 5.50369C28.534 3.9906 27.4696 2.85922 26.1022 2.31803C24.2956 1.60316 22.0542 1.89639 19.4407 3.1903C17.1318 4.33338 15.8515 4.27169 14.2942 4.0595C12.5226 3.81855 10.841 4.9403 10.383 6.66941L10.3137 6.93049C9.2213 11.047 8.4268 14.0411 11.2708 19.9345C7.91908 21.1718 8.02692 25.9737 11.434 27.0451C11.768 29.2191 12.6139 31.0998 13.9046 32.5216C15.428 34.1998 17.5375 35.1719 20.0456 35.3619C20.175 36.3026 20.1908 37.2199 20.0755 37.6198H14.3148C10.2814 37.6198 7 40.9011 7 44.9344V54.8538C7 55.4579 7.48978 55.9475 8.09375 55.9475H38.9713C39.5753 55.9475 40.065 55.4579 40.065 54.8538V44.9344C40.065 40.9011 36.7837 37.6198 32.7503 37.6198ZM12.4281 7.49158L12.4976 7.22952C12.6735 6.5655 13.3197 6.13413 13.9991 6.2271C15.7507 6.46575 17.5594 6.56288 20.4113 5.15085C22.4179 4.1575 24.1073 3.88122 25.2973 4.35219C26.3027 4.7501 26.8053 5.61427 27.0499 6.2691C27.8341 8.36888 28.7191 9.46164 29.8352 9.70807C31.0776 9.98216 31.9973 9.07435 32.3901 8.68672C32.6016 8.47792 33.0058 8.13317 33.3179 8.17211C33.6285 8.21017 34.0038 8.58599 34.4331 9.28916C34.4992 9.39722 34.5467 9.47531 34.6078 9.55352C35.8913 11.1984 35.6804 13.7871 35.118 16.0262C34.9882 15.9719 34.8456 15.9418 34.696 15.9418H34.4168C31.827 15.9418 29.4012 14.7919 27.761 12.787C27.3491 12.2574 26.4797 12.2574 26.0679 12.787C24.4279 14.7919 22.002 15.9418 19.4122 15.9418H12.369C12.254 15.9418 12.1434 15.9595 12.0392 15.9924C11.0411 12.7183 11.6096 10.576 12.4281 7.49158ZM13.4626 18.1293H19.4122C22.2404 18.1293 24.9127 17.0362 26.9145 15.0937C28.723 16.8486 31.0786 17.9102 33.6023 18.0989V20.8084C33.6023 21.3835 34.0476 21.8604 34.6212 21.8997C36.5681 22.0957 36.5421 24.8742 34.5879 25.0249C34.0449 25.0506 33.6033 25.4712 33.551 26.0122C33.2143 29.4913 31.0787 33.2088 26.0946 33.2088C25.5792 33.2088 25.1338 33.5686 25.0254 34.0723C25.0178 34.1076 24.8385 34.9469 24.7603 35.9211C24.6363 37.4642 24.8206 38.4823 25.3399 39.1255C25.6485 39.5076 26.071 39.7406 26.5461 39.7949C25.7246 42.9022 21.3393 42.9001 20.519 39.7949C20.9941 39.7406 21.4166 39.5076 21.7252 39.1255C22.2445 38.4823 22.4288 37.4642 22.3047 35.9211C22.2265 34.9469 22.0473 34.1076 22.0396 34.0723C21.9312 33.5686 21.4858 33.2088 20.9705 33.2088C14.8306 33.2088 13.7087 28.18 13.5114 26.018C13.4619 25.4749 13.0199 25.0514 12.4752 25.0248C10.5211 24.871 10.4992 22.0948 12.4437 21.8997C13.0174 21.8604 13.4626 21.3835 13.4626 20.8084V18.1293ZM37.8775 53.76H34.1591V45.7865C34.1014 44.3353 32.0289 44.3364 31.9716 45.7865V53.76H15.0935V45.7865C15.0358 44.3353 12.9633 44.3364 12.906 45.7865V53.76H9.1875V44.9344C9.1875 42.1073 11.4875 39.8074 14.3148 39.8074H18.2932C19.3175 45.8024 27.7499 45.798 28.7719 39.8074H32.7503C35.5775 39.8074 37.8775 42.1073 37.8775 44.9344V53.76Z" fill="#5531D2"/>
             </svg>
           </div>
-          <p>Гарантируем 100% результат после лечения если соблюдать все рекомендации врача</p>
+          <p>По окончанию лечения, консультации по телефону лечащим или дежурным доктором</p>
         </div>
       </div>
     </section>
@@ -390,7 +414,10 @@
               </p>
             </div>
 
-            <p class="price">5000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">5000 руб</p>
+          </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
@@ -406,7 +433,10 @@
               </p>
             </div>
 
-            <p class="price">8000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
+          </div>
           </div>
         <div class="slider-card">
             <div class="text-flex">
@@ -425,7 +455,10 @@
               </p>
             </div>
 
-            <p class="price">15000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
+          </div>
           </div>
       </div>
     </section>
@@ -446,7 +479,10 @@
             </p>
           </div>
 
-          <p class="price">5000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">5000 руб</p>
+          </div>
         </div></swiper-slide
         >
         <swiper-slide
@@ -464,7 +500,10 @@
             </p>
           </div>
 
-          <p class="price">8000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">8000 руб</p>
+          </div>
         </div></swiper-slide
         >
         <swiper-slide
@@ -485,7 +524,10 @@
             </p>
           </div>
 
-          <p class="price">15000 руб.</p>
+          <div class="text-slider">
+            <a  href="./price.html">Срочный вызов</a>
+            <p class="price">15000 руб</p>
+          </div>
         </div></swiper-slide
         >
       </swiper-container>
