--- a/price.html
+++ b/price.html
@@ -9,13 +9,20 @@
     <link rel="stylesheet" href="style.css" />
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Цены на услуги в Наркологической клинике Trezvostin</title>
-    <meta name="description" content="Узнайте цены на услуги наркологической клиники Trezvostin. Мы предлагаем широкий спектр услуг по лечению зависимости с различными пакетами и ценами.">
-    <meta name="keywords" content="цены на услуги, нарколог, лечение зависимости, стоимость услуг, Trezvostin">
-    <meta property="og:title" content="Цены на услуги в Наркологической клинике Trezvostin">
-    <meta property="og:description" content="Узнайте цены на услуги наркологической клиники Trezvostin. Мы предлагаем широкий спектр услуг по лечению зависимости с различными пакетами и ценами.">
-    <meta property="og:image" content="ссылка_на_изображение_логотипа_или_главной_страницы">
-    <meta property="og:url" content="ссылка_на_страницу_с_ценами">
+    <title>Наркологическая клиника Trezvostin - Цены на услуги. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.</title>
+    <meta name="description" content="Узнайте цены на наркологические услуги в клинике Trezvostin. Нарколог на дом – от 5000 ₽. Стандарт, Медиум, Ультра – курсы лечения от алкогольной зависимости. Стационар на дому – по запросу. Кодировка: имплант Торпедо от 5000 ₽, Эспераль от 8000 ₽, Нолтрексон от 25000 ₽, метод Довженко – по запросу. Госпитализация в девятиместной палате – 9000 ₽, двухместной – 10000 ₽, одноместной – 15000 ₽. Консультации по телефону: Психиатор и Нарколог от 3000 ₽. Дополнительные услуги: Отказ от лечения, Ложный вызов, Медотвод – от 5000 ₽. Раскодировка – от 6500 ₽. Заказывайте профессиональное лечение с опытными специалистами.">
+    <meta name="keywords" content="Нарколог на дом, Цены на наркологические услуги, Лечение алкогольной зависимости, Кодировка от алкоголя, Госпитализация в нарколог, Медицинская консультация по телефону, Кодирование методом Довженко, Лечение наркозависимости, Цены на психиатрические услуги, Онлайн консультация нарколога, Ультразвуковая кодировка от алкоголя, Лечение наркотической зависимости цены, Эспераль кодирование от алкоголя, Лечение алкоголизма в стационаре, Телефон нарколога по цене, Кодировка препаратом Нолтрексон, Онлайн консультация психиатра, Цены на лечение наркологических заболеваний, Довженко кодирование цена, Госпитализация наркологическая цена, Психиатрические консультации, Цены на лечение алкогольной зависимости, Госпитализация наркологическая, Лечение наркомании стационар, Экстренная помощь нарколога">
+    <meta property='og:title' content='Наркологическая клиника Trezvostin - Цены на услуги. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно.' />
+    <meta property='og:description' content='Узнайте цены на наркологические услуги в клинике Trezvostin. Нарколог на дом – от 5000 ₽. Стандарт, Медиум, Ультра – курсы лечения от алкогольной зависимости. Стационар на дому – по запросу. Кодировка: имплант Торпедо от 5000 ₽, Эспераль от 8000 ₽, Нолтрексон от 25000 ₽, метод Довженко – по запросу. Госпитализация в девятиместной палате – 9000 ₽, двухместной – 10000 ₽, одноместной – 15000 ₽. Консультации по телефону: Психиатор и Нарколог от 3000 ₽. Дополнительные услуги: Отказ от лечения, Ложный вызов, Медотвод – от 5000 ₽. Раскодировка – от 6500 ₽. Заказывайте профессиональное лечение с опытными специалистами.' />
+    <meta property='og:site_name' content='Наркологическая клиника Trezvostin' />
+    <meta property='og:locale' content='ru_RU' />
+    <meta property='og:image' content='https://trezvostin.ru/favicon.ico' />
+    <meta property='og:image:width' content='100' />
+    <meta property='og:image:height' content='100' />
+    <meta property='twitter:title' content="Наркологическая клиника Trezvostin - IV-терапия. Профессиональная наркологическая и психиатрическая помощь. Срочный выезд. Вывод из запоя на дому. Стационарное лечение. Анонимно." />
+    <meta property='twitter:description' content="Узнайте цены на наркологические услуги в клинике Trezvostin. Нарколог на дом – от 5000 ₽. Стандарт, Медиум, Ультра – курсы лечения от алкогольной зависимости. Стационар на дому – по запросу. Кодировка: имплант Торпедо от 5000 ₽, Эспераль от 8000 ₽, Нолтрексон от 25000 ₽, метод Довженко – по запросу. Госпитализация в девятиместной палате – 9000 ₽, двухместной – 10000 ₽, одноместной – 15000 ₽. Консультации по телефону: Психиатор и Нарколог от 3000 ₽. Дополнительные услуги: Отказ от лечения, Ложный вызов, Медотвод – от 5000 ₽. Раскодировка – от 6500 ₽. Заказывайте профессиональное лечение с опытными специалистами." />
+    <meta property='twitter:site' content='Наркологическая клиника Trezvostin' />
+    <meta property='twitter:image' content='https://trezvostin.ru/favicon.ico' />
     <meta property="og:type" content="website">
     <meta property="og:locale" content="ru_RU">
     <link
@@ -65,28 +72,28 @@
           <div class="price-text">Стандарт</div>
           <div class="price-text-second">
             <p class="price-count">5000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Медиум</div>
           <div class="price-text-second">
             <p class="price-count">8000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Ультра</div>
           <div class="price-text-second">
             <p class="price-count">15 000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Стационар на дому</div>
           <div class="price-text-second">
             <p class="price-count">по запросу</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
       </div>
@@ -98,28 +105,28 @@
           <div class="price-text">Имплант Торпедо</div>
           <div class="price-text-second">
             <p class="price-count">от 5000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Кодирование препаратом Эспераль</div>
           <div class="price-text-second">
             <p class="price-count">от 8000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Кодирование препаратом Нолтрексон</div>
           <div class="price-text-second">
             <p class="price-count">от 25000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Кодирование методом Довженко</div>
           <div class="price-text-second">
             <p class="price-count">по запросу</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
       </div>
@@ -131,21 +138,21 @@
           <div class="price-text">Девятиместная палата</div>
           <div class="price-text-second">
             <p class="price-count fix">9 000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Двухместная палата</div>
           <div class="price-text-second">
             <p class="price-count">10 000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Одноместная палата</div>
           <div class="price-text-second">
             <p class="price-count">15 000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
       </div>
@@ -157,14 +164,14 @@
           <div class="price-text">Психиатор по телефону</div>
           <div class="price-text-second">
             <p class="price-count">от 3 000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Нарколог по телефону</div>
           <div class="price-text-second">
             <p class="price-count">от 3 000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
       </div>
@@ -176,28 +183,28 @@
           <div class="price-text">Отказ от лечения</div>
           <div class="price-text-second">
             <p class="price-count">от 5000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Ложный вызов</div>
           <div class="price-text-second">
             <p class="price-count">от 5000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Медотвод</div>
           <div class="price-text-second">
             <p class="price-count">от 5000 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
         <div class="price-item">
           <div class="price-text">Раскодировка</div>
           <div class="price-text-second">
             <p class="price-count">от 6500 ₽</p>
-            <a class="button-price" href="index.html#call">Заказать</a>
+            <a class="button-price" href="tel:+79209374763">Заказать</a>
           </div>
         </div>
       </div>
